tests/fail/union.stderr
error: #[derive(OpenapiType)] cannot be used on unions
 --> tests/fail/union.rs:4:1
  |
4 | union Foo {
  | ^^^^^
